[gd_scene load_steps=14 format=3 uid="uid://crj12isi7ceyw"]

[ext_resource type="Script" uid="uid://cg8iv8veotlm8" path="res://scripts/menus/menu_stack.gd" id="1_iox1x"]
[ext_resource type="Script" uid="uid://dk0oyh1hwy238" path="res://scenes/ui/menus/title_menu.gd" id="1_nd50l"]
[ext_resource type="Script" uid="uid://cfidra8l63jcf" path="res://scripts/menus/menu.gd" id="2_nd50l"]
[ext_resource type="AudioStream" uid="uid://da5oygxus6g8a" path="res://assets/audio/click.mp3" id="3_4xxar"]
[ext_resource type="AudioStream" uid="uid://d024mg5knpil1" path="res://assets/audio/wind-swipe.mp3" id="4_dbg70"]
[ext_resource type="PackedScene" uid="uid://c40xhlbq0xxj2" path="res://scenes/ui/volume_slider/volume_slider.tscn" id="4_wu3hk"]
[ext_resource type="AudioStream" uid="uid://bko8nhioem3o2" path="res://assets/audio/wind-swipe-away.mp3" id="5_hibng"]

[sub_resource type="Animation" id="Animation_hibng"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Panel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Panel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Panel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_4xxar"]
resource_name = "transition_away_in"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Panel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Panel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Panel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_dbg70"]
resource_name = "transition_away_out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Panel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Panel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Panel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_iox1x"]
resource_name = "transition_in"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Panel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Panel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Panel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_nd50l"]
resource_name = "transition_out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Panel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Panel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Panel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hibng"]
_data = {
&"RESET": SubResource("Animation_hibng"),
&"transition_away_in": SubResource("Animation_4xxar"),
&"transition_away_out": SubResource("Animation_dbg70"),
&"transition_in": SubResource("Animation_iox1x"),
&"transition_out": SubResource("Animation_nd50l")
}

[node name="TitleMenu" type="Node2D" node_paths=PackedStringArray("menu_stack", "audio_click")]
script = ExtResource("1_nd50l")
menu_stack = NodePath("MenuStack")
audio_click = NodePath("AudioClick")

[node name="MenuStack" type="Node" parent="." node_paths=PackedStringArray("audio_transition_in", "audio_transition_out")]
script = ExtResource("1_iox1x")
audio_transition_in = NodePath("../AudioSwipe")
audio_transition_out = NodePath("../AudioSwipeAway")
metadata/_custom_type_script = "uid://cg8iv8veotlm8"

[node name="MainMenu" type="CanvasLayer" parent="MenuStack"]
script = ExtResource("2_nd50l")
metadata/_custom_type_script = "uid://cfidra8l63jcf"

[node name="Control" type="Control" parent="MenuStack/MainMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MenuStack/MainMenu/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -56.0
offset_right = 64.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuStack/MainMenu/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStack/MainMenu/Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuStack/MainMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Godot Starter"

[node name="ButtonPlay" type="Button" parent="MenuStack/MainMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="ButtonSettings" type="Button" parent="MenuStack/MainMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonQuit" type="Button" parent="MenuStack/MainMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuStack/MainMenu"]
libraries = {
&"": SubResource("AnimationLibrary_hibng")
}

[node name="SettingsMenu" type="CanvasLayer" parent="MenuStack"]
script = ExtResource("2_nd50l")
metadata/_custom_type_script = "uid://cfidra8l63jcf"

[node name="Control" type="Control" parent="MenuStack/SettingsMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MenuStack/SettingsMenu/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -43.0
offset_right = 64.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuStack/SettingsMenu/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStack/SettingsMenu/Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuStack/SettingsMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonAudio" type="Button" parent="MenuStack/SettingsMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio Settings"

[node name="ButtonBack" type="Button" parent="MenuStack/SettingsMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuStack/SettingsMenu"]
libraries = {
&"": SubResource("AnimationLibrary_hibng")
}

[node name="AudioMenu" type="CanvasLayer" parent="MenuStack"]
script = ExtResource("2_nd50l")
metadata/_custom_type_script = "uid://cfidra8l63jcf"

[node name="Control" type="Control" parent="MenuStack/AudioMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MenuStack/AudioMenu/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -81.0
offset_right = 64.5
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuStack/AudioMenu/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="MarginContainer" type="MarginContainer" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VolumeSlider" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_wu3hk")]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
label_text = "Music"

[node name="VolumeSlider2" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_wu3hk")]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
bus_index = 1
label_text = "Ambience"

[node name="VolumeSlider3" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_wu3hk")]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
bus_index = 2
label_text = "Effects"

[node name="ButtonBack" type="Button" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuStack/AudioMenu"]
libraries = {
&"": SubResource("AnimationLibrary_hibng")
}

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4xxar")
bus = &"Effects"

[node name="AudioSwipe" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dbg70")
bus = &"Effects"

[node name="AudioSwipeAway" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hibng")
bus = &"Effects"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="MenuStack/MainMenu/Control/Panel/MarginContainer/VBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="MenuStack/MainMenu/Control/Panel/MarginContainer/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="MenuStack/MainMenu/Control/Panel/MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="MenuStack/SettingsMenu/Control/Panel/MarginContainer/VBoxContainer/ButtonAudio" to="." method="_on_button_audio_pressed"]
[connection signal="pressed" from="MenuStack/SettingsMenu/Control/Panel/MarginContainer/VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
